@@ -199,3 +199,4 @@ Release 2.0.1
 Release 2.0.2
 
 * Bug Fixing 2861394 [ERDesignerNG] Convert Datamodel Ignores Data Type Changes
+* Bug Fixing 2836980 [ERDesignerNG] error onmultiple fields selection on entities
